<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyCarWiki</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- ### Strings da Activity "MenuPrincipal" -->
    <!--  -->
    <string name="label_titulo_menu_principal">Menu Principal</string>
    <!--  -->
    <string name="label_button_1_menu_principal">Meu Carro</string>
    <!--  -->
    <string name="label_button_2_menu_principal">Manutenção Periódica</string>
    <!--  -->
    <string name="label_button_3_menu_principal">Comparativo</string>
    <!--  -->
    <string name="title_activity_meu_carro">MeuCarroActivity</string>
    <!--  -->
    <string name="title_activity_manutencao_periodica">ManutencaoPeriodicaActivity</string>
    <!--  -->
    <string name="title_activity_comparativo">ComparativoActivity</string>
    <!-- ###################################### -->


    <!-- ### Strings da Activity "MeuCarro" -->
    <!--  -->
    <string name="label_titulo_meu_carro">Meu Carro</string>
    <!--  -->
    <string name="label_button_1_meu_carro">Cadastrar</string>
    <!--  -->
    <string name="label_button_2_meu_carro">Informações</string>
    <!-- ################################# -->


    <!-- ### Strings da Activity "ManutencaoPeriodica" -->
    <!--  -->
    <string name="label_titulo_manutencao_periodica">Manutenção Periodica</string>
    <!--  -->
    <string name="label_button_1_manutencao_periodica">Atualizar Quilometragem</string>
    <!--  -->
    <string name="label_button_2_manutencao_periodica">Recomendações</string>
    <!-- ############################################ -->


    <!-- ### Strings da Activity "Comparativo" -->
    <!--  -->
    <string name="label_titulo_comparativo">Comparativo</string>
    <!--  -->
    <string name="label_carro_1_comparativo">Carro 1</string>
    <!--  -->
    <string name="label_carro_2_comparativo">Carro 2</string>
    <!--  -->
    <string name="label_button_1_comparativo">Comparar</string>
    <!--  -->
    <string name="label_tipo_spinner_marcas_comparativo">Marcas: </string>
    <!--  -->
    <string name="label_tipo_spinner_modelos_comparativo">Modelos / Ano: </string>
    <!--  -->
    <string name="label_checkbox_meu_carro_comparativo">Meu Carro</string>
    <!--  -->
    <string name="label_spinner_prompt_comparativo">Selecione</string>
    <!--  -->
    <string-array name="string_array_marcas_comparativo">

        <!--  -->
        <item>Chevrolet</item>
        <!--  -->
        <item>Fiat</item>
        <!--  -->
        <item>Ford</item>
        <!--  -->
        <item>Volkswagen</item>
        <!--  -->
    </string-array>
    <!--  -->
    <string-array name="string_array_modelos_chevrolet_comparativo">

        <!--  -->
        <item>Sonic Effect 1.6 16V AT6 / 2014</item>
        <!--  -->
    </string-array>
    <!--  -->
    <string-array name="string_array_modelos_volkswagen_comparativo">

        <!--  -->
        <item>Gol Highline 1.6 / 2014</item>
        <!--  -->
    </string-array>
    <!--  -->
    <string-array name="string_array_modelos_fiat_comparativo">

        <!--  -->
        <item>Idea Essence 1.6 16V / 2014</item>
        <!--  -->
    </string-array>
    <!--  -->
    <string-array name="string_array_modelos_ford_comparativo">

        <!--  -->
        <item>Fiesta Titanium 1.6 16V Powershift / 2014</item>
        <!--  -->
    </string-array>
    <!-- #################################### -->

    <string name="title_activity_cadastrar">Cadastrar</string>
    
    <!-- ### Strings da Activity "Cadastrar" -->
    <!--  -->
    <string name="label_titulo_cadastrar">Selecione seu carro</string>
    <string name="label_marcas_cadastrar">Marcas:</string>
    <string name="label_modelos_cadastrar">Modelos:</string>
    <string name="label_button1_cadastrar">Cadastrar</string>
    <string name="label_km_cadastrar">Quilometragem:</string>
    <!-- ################################# -->

</resources>
