<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewTituloMenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_titulo_menu_principal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1MenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_1_menu_principal" 
        android:onClick="callMeuCarroActivity" />

    <Button
        android:id="@+id/button2MenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_2_menu_principal"
        android:onClick="callManutencaoPeriodicaActivity" />

    <Button
        android:id="@+id/button3MenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_3_menu_principal"
        android:onClick="callComparativoActivity" />

</LinearLayout>
