<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MeuCarroActivity" >

    <TextView
        android:id="@+id/textViewTituloMeuCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_titulo_meu_carro"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1MeuCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_1_meu_carro" />

    <Button
        android:id="@+id/button2MeuCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_2_meu_carro" />

</LinearLayout>
