<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ComparativoActivity" >

    <TextView
        android:id="@+id/textViewTituloComparativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_titulo_comparativo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewCarro1Comparativo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_carro_1_comparativo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkBoxMeuCarroComparativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_checkbox_meu_carro_comparativo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewMarcasCarro1Comparativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tipo_spinner_marcas_comparativo" />

        <Spinner
            android:id="@+id/spinnerMarcasCarro1Comparativo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewModelosCarro1Comparativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tipo_spinner_modelos_comparativo" />

        <Spinner
            android:id="@+id/spinnerModelosCarro1Comparativo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCarro2Comparativo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_carro_2_comparativo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewMarcasCarro2Comparativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tipo_spinner_marcas_comparativo" />

        <Spinner
            android:id="@+id/spinnerMarcasCarro2Comparativo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewModelosCarro2Comparativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tipo_spinner_modelos_comparativo" />

        <Spinner
            android:id="@+id/spinnerModelosCarro2Comparativo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <Button
        android:id="@+id/button1Comparativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_1_comparativo" />

</LinearLayout>